--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,9 +22,9 @@ jobs:
       - name: yarn 
         run: yarn add eslint
 
-      - name: Lint JavaScript files
-        run: yarn eslint "lambda-functions/lib/**/*.js"
-        if: always()
+        #      - name: Lint JavaScript files
+        # run: yarn eslint "lambda-functions/lib/**/*.js"
+        # if: always()
 
       - name: Lint JSON files
         run: |
