--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Master
-        uses: actions/checkout@master
+        uses: actions/checkout@v2.2.0
       - name: Install mdl
         run: |
           sudo apt-get update \
@@ -47,7 +47,7 @@ jobs:
     container:
       image: rounin/circleci-linter
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2.2.0
       - name: Lint JSON files
         run: |
           find . \
