--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -42,7 +42,7 @@ jobs:
         run: sudo yarn global add jsonlint
 
       - name: Lint JavaScript files
-        run: eslint "lambda-functions/lib/**/*.js"
+        run: eslint "*.js"
         if: always()
 
       - name: Lint JSON files
